fix [crm] : Trabajo final crm TGS

--- a/src/app/admin/contents/contents.component.html
+++ b/src/app/admin/contents/contents.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col d-flex justify-content-end">
-    <a [routerLink]="['/admin/add']">
+    <a [routerLink]="['/app/admin/add']">
       <button class="btn btn-primary w-auto" type="button">Gestor de contenidos</button>
     </a>
   </div>
