--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -26,7 +26,7 @@
                 aria-describedby="inputGroup-sizing-default" placeholder="Contraseña">
             </div>
 
-            <a href="admin/founders">
+            <a href="app/admin/founders">
               <button class="btn login-button-lg" type="button">Entrar</button>
             </a>
           </div>
