--- a/src/app/content/form/form.component.scss
+++ b/src/app/content/form/form.component.scss
@@ -28,36 +28,33 @@
   padding: 50px;
 }
 
-
-
-.card-img-top{
+.card-img-top {
   width: 150px;
-
-}      
-
-.custom-card-body{
-  background: white !important;
-
 }
 
-.information-nefilis{
-   &__card{
-    .image-card{
+.custom-card-body {
+  background: white !important;
+}
+
+.information-nefilis {
+  &__card {
+    .image-card {
       width: 100%;
 
       max-height: 300px;
     }
     max-height: 700px;
-   }
+  }
 }
-
-
 
 .flip-card {
   background-color: transparent;
-  width: 300px;
+  width: 100%;
   height: 300px;
   perspective: 1000px;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .flip-card-inner {
@@ -67,14 +64,15 @@
   text-align: center;
   transition: transform 0.6s;
   transform-style: preserve-3d;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .flip-card:hover .flip-card-inner {
   transform: rotateY(180deg);
 }
 
-.flip-card-front, .flip-card-back {
+.flip-card-front,
+.flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -88,7 +86,17 @@
 }
 
 .flip-card-back {
-  background-color: #2980b9;
+  background-color: #3a3737;
   color: white;
   transform: rotateY(180deg);
+}
+
+.release-img {
+  // -webkit-box-reflect: below 0px linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1));
+  width: 100%;
+  height: 300px;
+}
+
+.save-trailer {
+  width: 50%;
 }
