--- a/src/app/shared/newsletter/newsletter.component.html
+++ b/src/app/shared/newsletter/newsletter.component.html
@@ -1,4 +1,19 @@
-<iframe class="w-100"
-  src="https://forms.zohopublic.com/johnnelson10204/form/NewsLetter/formperma/Le2_xiqn-cbMgwzYU6Qs7jim4XMhJ-DcS1aLBEEmGKM"
-  style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px" marginwidth="0px"
-  allowfullscreen></iframe>
+<div class="netflix-background">
+</div>
+
+<div class="container-fluid blur-container d-flex flex-column align-items-center justify-content-center">
+  <div class="col blur-col">
+    <header-nav [loginAccess]="true"></header-nav>
+    <div class="col">
+      <div class="row banner-phrases">
+        <p *ngIf="showLoad" class="text-center">
+          Cargando recursos...
+        </p>
+        <iframe class="w-30 form-frame" (load)="iframeLoadDone()"
+          src="https://forms.zohopublic.com/johnnelson10204/form/NewsLetter/formperma/Le2_xiqn-cbMgwzYU6Qs7jim4XMhJ-DcS1aLBEEmGKM"
+          style="border:0px #ffffff none;" name="myiFrame" scrolling="no" frameborder="1" marginheight="0px"
+          marginwidth="0px" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</div>
