--- a/src/app/shared/newsletter/newsletter.component.scss
+++ b/src/app/shared/newsletter/newsletter.component.scss
@@ -1,5 +1,10 @@
 iframe {
-  height: calc(100vh - 7px);
+  // height: calc(100vh - 200px);
+  height: calc(100vh - 200px);
   width: calc(100vw - 0px);
   box-sizing: border-box;
+}
+
+.form-frame {
+  padding-top: 20px;
 }
